[package]
name = "tumblr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tumblr_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
oauth2 = "4.4.1"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
log = "0.4.19"
env_logger = "0.10.0"
thiserror = "1.0.44"
dotenvy = "0.15.7"
clap = { version = "4.3.19", features = ["derive"] }
